Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27936

Regression: lupdate is very very slow

XMLWordPrintable

    • 70068ab65 (dev), 67cd7d4c6 (6.8), 88159c3e8 (6.7), 4788ee20a (tqtc/lts-6.5)

      Work time of lupdate utility has been increased by times. It seems number of files checked by lupdate is differ from 4.5.1. I am assuming that files in INCLUDEPATH are not checked by lupdate 4.5.1. With lupdate 4.5.1 one of my project processed for about 10 seconds, with lupdate 4.6.3 it is required more than 3 hours!!! to generate updated ts-files. In this project INCLUDEPATH contains paths to headers for some third-party libraries like boost and stlport.

      Some time ago I have updated qt to 4.7.3 and I have noticed what lupdate works better than in qt 4.6.3 so I even don't merge my patch in qt 4.7.3. lupdate 4.7.4 shows the same result as lupdate 4.7.3: work time of lupdate is acceptable. But now I have updated boost library from 1.49 to 1.52 and the problem is returned back.

      qt 4.7.4 + boost 1.49: - less than 1 minute
      qt 4.7.4 + boost 1.52: - I have waiting for a 40 minutes, then terminated the dummy lupdate and gone to open this bug report.

      workaround:
      Place inclusion of all boost headers in the precompiled header file (PRECOMPILED_HEADER in pro). As lupdate is not processing precompiled header it will mask the problem.

      P.S. I still vote for new command line option to disable processing files in INCLUDEPATH even if the file is included to one of all project source files. This has been rejected before.

        1. lupdatespeed.zip
          2 kB
        2. main.cpp.patch
          0.6 kB
        For Gerrit Dashboard: QTBUG-27936
        # Subject Branch Project Status CR V

            jbornema Joerg Bornemann
            nikolaynnov Andrey
            Votes:
            21 Vote for this issue
            Watchers:
            34 Start watching this issue

              Created:
              Updated:
              Resolved: