lupdate: Fix long runtime with supposed includes in namespaces

Lupdate was extremely slow for projects with certain libboost includes.
The reason is that the boost includes define types in the boost
namespace mixed with pre-processor conditionals such that lupdate
detected further boost includes within namespaces. See the linked issue
for details.

Those included files were then exempt from any caching. That was not
just a performance penalty, but a working include file cache is also
needed for breaking out of include cycles.

The following condition was preventing the usage of the cached parsing
result:
    if (namespaces.size() == 1 && functionContext.size() == 1
        && functionContextUnresolved.isEmpty()
        && pendingContext.isEmpty() ...)
        // then use the parse result
These four members are exactly the CppParserState.

We now not only use the file path as key for the parser results cache,
but the parser state in addition. This allows us to remove the parser
state from the condition above and still return correct parser results.

Fixes: QTBUG-27936
Change-Id: I9d7c22ad04fa42d39778ee6637c9cbbfd681d9bf
Reviewed-by: Kai Köhne <kai.koehne@qt.io>
(cherry picked from commit 70068ab65d447312acb8d5106144cd01669cecdc)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 67cd7d4c6d9ab107b41be468e92561418190df8b)
(cherry picked from commit 88159c3e8d6583cff3cba1a42d1ad439f7acc078)